# pre-commit-hooks

./: .pre-commit-hooks.yaml  README.md  ensure_ansible_sign_config.py  setup.cfg
pre_commit_hooks/: ansible_sign_config.py  ensure_ansible_sign_config.py  ensure_ansible_sign_config.sh
