[metadata]
name = pre_commit_hooks
version = 0.0.3
description = Pre-commit hooks
long_description = file: README.md
license = GPL
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    ansible-sign-config = pre_commit_hooks.ansible_sign_config:master

[bdist_wheel]
universal = True
